--- a/Assignment-2/EmployeeApplication/EmployeeApplication/EmployeeApplication.csproj
+++ b/Assignment-2/EmployeeApplication/EmployeeApplication/EmployeeApplication.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MainClassLibrary">
+      <HintPath>..\..\MainClassLibrary\MainClassLibrary\bin\Debug\MainClassLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
