--- a/Assignment-2/MainClassLibrary/MainClassLibrary/MainClassLibrary.csproj
+++ b/Assignment-2/MainClassLibrary/MainClassLibrary/MainClassLibrary.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="MasterClass.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordDuplicateException.cs" />
