--- a/AddressBook/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook/AddressBook.csproj
@@ -44,14 +44,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business Layer\AddRecord.cs" />
+    <Compile Include="Business Layer\Utility\Utility.cs" />
+    <Compile Include="Business Layer\ContactDetails.cs" />
     <Compile Include="Data Layer\Address.cs" />
     <Compile Include="Business Layer\AddressBook.cs" />
     <Compile Include="Client Layer\Program.cs" />
-    <Compile Include="Business Layer\Contact.cs" />
+    <Compile Include="Data Layer\Contact.cs" />
     <Compile Include="Data Layer\Constants.cs" />
     <Compile Include="Client Layer\Menu.cs" />
     <Compile Include="Data Layer\PhoneNumber.cs" />
-    <Compile Include="Business Layer\ExceptionRaised.cs" />
+    <Compile Include="Business Layer\Exceptions\ExceptionRaised.cs" />
     <Compile Include="Business Layer\DeleteRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Business Layer\Search.cs" />
